<resources>
    <string name="general_login">Login</string>
    <string name="general_register">Register</string>
    <string name="general_return">Return</string>
    <string name="general_save">Save</string>
    <string name="general_back">Back</string>
    <string name="general_next">Next</string>
    <string name="general_reduction_card">Discount card</string>
    <string name="general_reduction_cards">Discount cards</string>
    <string name="general_corporate_cards">Corporate contract</string>
    <string name="general_first_name">First name</string>
    <string name="general_insurance">Cancellation insurance</string>
    <string name="general_ftp_cards">Loyalty cards</string>
    <string name="general_call">Call our Contact Centre</string>
    <string name="general_number">Number</string>
    <string name="general_edit">Edit</string>
    <string name="general_please_select">Select</string>
    <string name="general_name">Last name</string>
    <string name="general_settings">Settings</string>
    <string name="general_password">Password</string>
    <string name="account_title">Title</string>
    <string name="account_street">Street</string>
    <string name="account_telephone_number">Telephone number</string>
    <string name="account_bus">Postbox</string>
    <string name="account_postcode">Postcode</string>
    <string name="account_city">City</string>
    <string name="alert_request_timeout">Request timed out. Please try again later.</string>
    <string name="alert_information">Information</string>
    <string name="alert_retry">Retry</string>
    <string name="alert_no_result_found">There are no trains at the requested departure time. Please enter a different travel time or use the earlier/later train function.</string>
    <string name="alert_loading">Loading…</string>
    <string name="alert_waiting">Please wait…</string>
    <string name="alert_finding_your_trains">Searching for train times</string>
    <string name="alert_offerquery_select_city">Please select a city</string>
    <string name="alert_offerquery_same_station">Choose a different station</string>
    <string name="alert_offerquery_station_empty">Select a station</string>
    <string name="alert_offerquery_date_empty">Select a date</string>
    <string name="alert_departure_later_than_return">Return date must be later than departure date.</string>
    <string name="alert_register_error_email_empty">Please enter your email</string>
    <string name="alert_register_error_email_wrong">Email format is incorrect</string>
    <string name="alert_register_error_password_empty">Please enter your password</string>
    <string name="alert_register_error_different_passwrod">Your password and password confirmation must be identical.</string>
    <string name="alert_register_error_passwrod_wrong">Passwords should contain at least 2 characters from each of the following groups ([A-Z],[a-z],[0-9])</string>
    <string name="alert_register_error_firstname_empty">Please enter your first name</string>
    <string name="alert_register_error_lastname_empty">Please enter your last name</string>
    <string name="alert_register_error_title_empty">Please select a title</string>
    <string name="alert_time_select_wrong">Please select a date in the future.</string>
    <string name="alert_station_data_wrong">The entered data seems to be incorrect. Please try again.</string>
    <string name="app_name">SNCB International</string>
    <string name="tab_home">Home</string>
    <string name="tab_planner">Book</string>
    <string name="tab_cities">Cities</string>
    <string name="tab_assistant">My Tickets</string>
    <string name="planner_view_search_btn">Search</string>
    <string name="planner_view_oneway">One-way</string>
    <string name="planner_view_return_trip">Return trip</string>
    <string name="planner_view_class">Travel class</string>
    <string name="planner_view_class_1st">1st class</string>
    <string name="planner_view_class_2nd">2nd class</string>
    <string name="planner_view_passengers_btn">Passengers</string>
    <string name="planner_view_select_station">SELECT STATION</string>
    <string name="planner_view_select_station_search_hint">Input text</string>
    <string name="planner_view_select_date_and_time">Select date/time</string>
    <string name="planner_view_select_date">Select date</string>
    <string name="planner_view_select_time">/ time</string>
    <string name="planner_view_departing_btn">Outward journey</string>
    <string name="planner_view_returning_btn">Return journey</string>
    <string name="planner_search_result_list_header">Show earlier trains…</string>
    <string name="planner_search_result_list_footer">Show later trains…</string>
    <string name="passengers_selection_view_title">Passengers</string>
    <string name="passengers_selection_view_more_than">More than 6 passengers</string>
    <string name="passengers_select_view_travel_party">Passengers</string>
    <string name="passengers_select_view_cards">Cards</string>
    <string name="othertravelpaty_view_desc">To buy tickets for more than six passengers please call our Contact Centre by using the call function below.</string>
    <string name="corporate_cards_view_greenpoints">Greenpoints number</string>
    <string name="corporate_cards_view_find_contracts">Retrieve contracts</string>
    <string name="corporate_cards_view_tcp_contract">TCP</string>
    <string name="corporate_cards_view_ecp_contract">GND</string>
    <string name="corporate_cards_view_icp_contract">ICP</string>
    <string name="corporate_cards_view_desc">Does your company have a Corporate Contract for travel with Eurostar (GND)or ICE/KAT (iCP)? Enter your contract number below to benefit from corporate fares.</string>
    <string name="departure_detail_view_price_info">Please note: displayed prices are for information and to help you choose the most appropriate travel option. The final price for your reservation will be displayed prior to payment.</string>
    <string name="departure_detail_view_travel_btn">Journey</string>
    <string name="departure_detail_view_conditions_btn">Conditions</string>
    <string name="departure_detail_view_price_btn">Price</string>
    <string name="departure_detail_view_nf">Non-Flex</string>
    <string name="departure_detail_view_mf">Mid-Flex</string>
    <string name="departure_detail_view_ff">Full-Flex</string>
    <string name="bookingshorizon_view_info">Reservations for this journey are not yet possible. Most international trains reservations are possible 3 months before travel (4 months for Eurostar and Fyra).</string>
    <string name="bookingshorizon_view_btn">See train times</string>
    <string name="ticket_unavailable_view_info_title">This ticket is not available</string>
    <string name="ticket_unavailable_view_info_suggestion">Please call our Contact Centre for more information</string>
    <string name="checkout_view_title">Order</string>
    <string name="checkout_view_delivery">Delivery</string>
    <string name="insurance_view_desc_one">Refund after cancellation</string>
    <string name="insurance_view_desc_two">Cover for unforeseen events</string>
    <string name="insurance_view_desc_three">Also for non-flex tickets</string>
    <string name="insurance_view_desc_four">Touring quality guarantee</string>
    <string name="insurance_view_desc_five">Exclusively for our customers</string>
    <string name="insurance_view_btn_text">Per person, per leg</string>
    <string name="insurance_view_btn_per_person">Per person</string>
    <string name="insurance_view_btn_per_traject">Per leg</string>
    <string name="delivery_view_title">Delivery method</string>
    <string name="delivery_view_type_station">Collect at station</string>
    <string name="delivery_view_type_ticketless">Thalys Ticketless</string>
    <string name="delivery_view_type_post">Postal delivery</string>
    <string name="delivery_view_type_print">Mobile ticket</string>
    <string name="delivery_print_view_remind">Please enter each passenger\'s name. These names will appear on the ticket.</string>
    <string name="delivery_ticketless_view_info">For passengers in membership of a Eurostar or Thalys loyalty programme, please enter the card number below.</string>
    <string name="delivery_station_pickup_view_info">If you pay by credit card, you will need to show the credit card used to collect your ticket.</string>
    <string name="delivery_ticketless_view_card_number">Card number</string>
    <string name="book_email_view_email_add">Email</string>
    <string name="setting_view_currency">Currency</string>
    <string name="setting_view_general_settings">Settings</string>
    <string name="setting_view_version">Version</string>
    <string name="setting_view_account">Your personal details</string>
    <string name="setting_view_language">Language</string>
    <string name="setting_view_language_desc">Please select language.</string>
    <string name="setting_view_currency_desc">Please select preferred currency.</string>
    <string name="setting_view_first_name_alert">Please enter your first name</string>
    <string name="setting_view_last_name_alert">Please enter your last name</string>
    <string name="setting_view_email_alert">Please enter your email</string>
    <string name="setting_view_base_information">Additional information</string>
    <string name="general_salutation">Title</string>
    <string name="setting_view_salutation_alert">Select title</string>
    <string name="book_view_mobile_phone_number">Mobile phone number</string>
    <string name="setting_view__mobile_number_alert">Please provide your mobile phone number</string>
    <string name="settings_view_personal_info_description">This app stores your personal data to make future bookings easier. Your personal data are not communicated to any third parties nor used for marketing purposes. You can choose not to have your data stored. In this case, you will need to re-enter your data  when making each new booking.</string>
    <string name="checkappversion_alert_download_new_version">DOWNLOAD NEW VERSION</string>
    <string name="settings_automatic_update_title">Allow automatic updates</string>
    <string name="settings_automatic_update_info">You can choose to allow automatic updates for this app.</string>
    <string name="settings_check_for_update_now">Check now for updates</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_email">Email address</string>
    <string name="general_information">Info</string>
    <string name="general_notnow">Not now</string>
    <string name="settings_personaldetail_email_error">Wrong email address</string>
    <string name="settings_personaldetail_password">Password</string>
    <string name="settings_notificationcharacteristics_title">Push notification settings</string>
    <string name="settings_dialog_input_password">Choose a password</string>
    <string name="settings_dialog_show_password">Show password</string>
    <string name="settings_dialog_input_email">Please enter an email address</string>
    <string name="settings_dialog_notifi_start">How long before departure?</string>
    <string name="settings_dialog_notifi_delay">For delays from</string>
    <string name="settings_notification_update">UPDATE</string>
    <string name="update_title">New version</string>
    <string name="update_header">Discover our updates:</string>
    <string name="update_info">You can manage automatic update notifications in the settings</string>
    <string name="settings_local_dossier">Your booking needs to be manually refreshed to become in sync with the new selected language.</string>
    <string name="migrate_view_refreshed_dossier">View refreshed booking</string>
    <string name="migrate_stay">Stay on current screen</string>
    <string name="migrate_dossier_success">Booking has been successfully converted</string>
</resources>