<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_secondaryaction"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/general_email"
            android:textColor="@color/textcolor_primaryaction"
            android:textSize="@dimen/textsize_medium" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_email_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_error"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/settings_personaldetail_email_error"
        android:visibility="gone"
        android:textColor="@color/textcolor_primaryaction"
        android:textSize="@dimen/textsize_smaller" />

    <EditText
        android:id="@+id/et_settings_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/settings_dialog_input_email"
        android:textColor="@color/textcolor_primaryaction"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/textsize_smaller" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="40dp"
        android:background="@color/list_divider" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_secondaryaction"
        android:text="@string/general_cancel"
        android:textColor="@color/textcolor_thirdaction" />
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_view_button"
        android:text="@string/general_ok"
        android:textColor="@color/textcolor_secondaction" />
</LinearLayout>