<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_secondaryaction"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_personaldetail_password"
            android:textColor="@color/textcolor_primaryaction"
            android:textSize="@dimen/textsize_medium" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/settings_dialog_input_password"
        android:textColor="@color/textcolor_fourthaction"
        android:textSize="@dimen/textsize_smaller" />

    <EditText
        android:id="@+id/et_settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/settings_dialog_input_password"
        android:textColor="@color/textcolor_primaryaction"
        android:inputType="textPassword"
        android:textSize="@dimen/textsize_smaller" />

    <CheckBox
        android:id="@+id/cb_settings_showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/settings_dialog_show_password"
        android:textColor="@color/textcolor_fourthaction"
        android:textSize="@dimen/textsize_smaller"
        android:checked="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="40dp"
        android:background="@color/list_divider" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_secondaryaction"
        android:text="@string/general_cancel"
        android:textColor="@color/textcolor_thirdaction" />
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_view_button"
        android:text="@string/general_ok"
        android:textColor="@color/textcolor_secondaction" />
</LinearLayout>