<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_secondaryaction"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings_notificationcharacteristics_title"
            android:textColor="@color/textcolor_primaryaction"
            android:textSize="@dimen/textsize_medium" />
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/background_group_title"
            android:padding="5dp"
            android:src="@drawable/ic_close"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_notification_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/background_error"
        android:visibility="gone"
        android:text="Error Message"
        android:padding="@dimen/padding_default"
        android:textColor="@color/textcolor_primaryaction"
        android:textSize="@dimen/textsize_smaller" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/settings_dialog_notifi_start"
        android:textColor="@color/textcolor_fourthaction"
        android:textSize="@dimen/textsize_smaller" />

    <Spinner
        android:id="@+id/sp_start_notifi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/settings_start_time"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/settings_dialog_notifi_delay"
        android:textColor="@color/textcolor_fourthaction"
        android:textSize="@dimen/textsize_smaller" />

    <Spinner
        android:id="@+id/sp_delay_notifi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/settings_time"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="40dp"
        android:background="@color/list_divider" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_secondaryaction"
        android:text="@string/general_cancel"
        android:textColor="@color/textcolor_thirdaction" />


    <RelativeLayout
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:background="@color/background_view_button">

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_view_button"
            android:layout_centerInParent="true"
            android:text="@string/settings_notification_update"
            android:textSize="@dimen/textsize_medium"
            android:textColor="@color/textcolor_secondaction" />
        <ProgressBar
            android:id="@+id/pgb_update_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_toLeftOf="@+id/tv_enable"
            android:layout_gravity="center_horizontal"/>

    </RelativeLayout>
</LinearLayout>